admission controller.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spot-admission-controller
  namespace: kube-system
  labels:
    name: spot-admission-controller
spec:
  ports:
    - name: webhook
      port: 443
      targetPort: 8080
  selector:
    name: spot-admission-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spot-admission-controller
  namespace: kube-system
  labels:
    name: spot-admission-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      name: spot-admission-controller
  template:
    metadata:
      name: spot-admission-controller
      labels:
        name: spot-admission-controller
    spec:
      containers:
        - name: webhook
          image: gcr.io/spotinst-artifacts/spot-ocean-admission-controller:0.1.2
          imagePullPolicy: Always
          command: []
          args:
            - --certFile=/etc/certs/cert.pem
            - --keyFile=/etc/certs/key.pem
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 00Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
            - name: logs
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: spot-admission-controller
        - name: logs
          emptyDir: {}
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "spot-admission-controller.kube-system.svc"
webhooks:
  - name: "spot-admission-controller.kube-system.svc"
    namespaceSelector:
      matchLabels:
        spot.io/inject-aks-spot-toleration: "true"
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: "kube-system"
        name: "spot-admission-controller"
        path: "/add-taints"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURURENDQWpTZ0F3SUJBZ0lVS2hYTGw4VjVoVU4vc0FhV2tUbnlaL1dubVF3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1BqRUxNQWtHQTFVRUJoTUNTVXd4RURBT0JnTlZCQWdUQjBWNFlXMXdiR1V4RURBT0JnTlZCQW9UQjBWNApZVzF3YkdVeEN6QUpCZ05WQkFzVEFrTkJNQjRYRFRJek1EVXlNakE1TlRVd01Gb1hEVEk0TURVeU1EQTVOVFV3Ck1Gb3dQakVMTUFrR0ExVUVCaE1DU1V3eEVEQU9CZ05WQkFnVEIwVjRZVzF3YkdVeEVEQU9CZ05WQkFvVEIwVjQKWVcxd2JHVXhDekFKQmdOVkJBc1RBa05CTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQwpBUUVBeDNqSDR [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Ignore
